tests/dataset/tpc-ds/compiler/pl/q71.error
run: exit status 2
ERROR: /tmp/q71.pl:58: user:main main/0: Unknown procedure: concat/4
